# tailsocks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  lint_check.py  pyproject.toml  requirements.txt  run_coverage.py  tailscale_proxy_manager.py
.github/workflows/: ci.yml  publish.yml
tailsocks/: README.md  __init__.py  __main__.py  cli.py  logger.py  manager.py
tailsocks/tailsocks/: __init__.py  cli.py  manager.py
tests/: conftest.py  test_bind_address.py  test_cli.py  test_fixes.py  test_logger.py  test_main.py  test_main_module.py  test_manager.py  test_manager_edge_cases.py  test_port_checking.py  test_status_display.py
